fix layout on mobiles, update year

--- a/frontend/src/blocks/header/header.css
+++ b/frontend/src/blocks/header/header.css
@@ -10,5 +10,6 @@
   .header {
     min-height: 56px;
     padding-left: 27px;
+    padding-right: 27px;
   }
 }
